--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.mccue</groupId>
     <artifactId>rosie-jetty</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -45,12 +45,18 @@
         <dependency>
             <groupId>dev.mccue</groupId>
             <artifactId>rosie</artifactId>
-            <version>0.0.9</version>
+            <version>0.0.11</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
             <version>11.0.15</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jspecify</groupId>
+            <artifactId>jspecify</artifactId>
+            <version>0.3.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
